--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,95 @@
 @import url(sanitize.css);
-h1{
-  font-size: 24px;
-  margin: 0;
+@import url('https://fonts.googleapis.com/css?family=Sriracha&display=swap');
+
+body{
+  background-color: #f0f0f0;
+  padding: 10px;
+  font-size: 14px;
+  color: #666;
 }
+
+.container{
+  width: 800px;
+  margin: 0 auto;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+header{
+  background-color: #422814;
+  padding: 10px;
+  color: #fff;
+}
+
+header h1{
+  font-family: "Sriracha", cursive;
+  margin: 0;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.description img{
+  clear: left;
+  float: left;
+  margin: 0 10px 10px 0;
+}
+
+.information h1{
+  font-size: 18px;
+  margin: 0 10px 10px 0;
+  float: left;
+}
+
+.information .type{
+  display: inline;
+  background-color: #E35A4D;
+  padding: 3px 5px;
+  font-size: 80%;
+  color: #FFF;
+}
+
 .content{
   background-color: #fff;
-  width: 600px;
-  margin: 10px auto;
-  border: 1px solid #d1d1d1;
-  padding: 30px;
+  padding: 20px;
 }
-input{
-  border-bottom: 1px solid #d1d1d1;
-  font-size: 1.2em;
-  width: 100%;
-  padding: 8px;
+
+.songs{
+  margin: 0 0 20px;
 }
-button{
-  width: 100%;
-  background-color: #2096F3;
-  color: #fff;
-  padding: 15px;
-  border-radius: 3px;
-  box-shadow: 0 0 8px rgba(0,0,0,0.4);
+
+.songs h2{
+  clear: left;
+  font-size: 100%;
+  font-weight: normal;
+  margin: 0;
+  background-color: #E6E4DD;
+  padding: 5px 10px;
 }
-.control{
-  margin-bottom: 3em;
+
+.songs ol{
+  padding: 0;
+  margin: 0;
+  list-style: decimal inside;
 }
-label{
-  display: block;
-  margin-bottom: 0.5em;
+
+.songs li{
+  border-bottom: 1px solid #ccc;
+  width: 50%;
+  float: left;
+  padding: 5px 10px;
 }
-.required{
-  margin-left: 0.3em;
-  color: #f33;
-  font-size: 0.9em;
-  padding: 3px;
-  background-color: #fee;
-  font-weight: bold;
+
+.clearfix:after{
+  content: " ";
+  display: table;
+  clear: both;
 }
-body{
-  background-color: #fafafa;
+
+a{
+  color: #666;
+}
+
+footer{
+  text-align: center;
+  font-size: 80%;
 }
