--- a/css/style.css
+++ b/css/style.css
@@ -1,95 +1,20 @@
-@import url(sanitize.css);
-@import url('https://fonts.googleapis.com/css?family=Sriracha&display=swap');
-
-body{
-  background-color: #f0f0f0;
-  padding: 10px;
-  font-size: 14px;
-  color: #666;
+﻿.container {
+    text-align: center; /* 全体を中央揃えに */
+    max-width: 600px; /* 最大幅を 600px に */
+    margin: 30px auto; /* 上下に 30px の余白を付け、中央揃えに */
 }
 
-.container{
-  width: 800px;
-  margin: 0 auto;
-  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+#timer {
+    font-size: 36px; /* 文字サイズを 36px に */
+    border: 1px solid #ccc; /* グレーの枠線を引く */
+    margin: 30px auto; /* 上下に 30px の余白を付け、中央揃えに */
+    padding: 50px; /* 要素内余白を 50px に */
+    background-color: #000; /* 背景色を黒に */
+    color: #fff; /* 文字色を白に */
+    border-radius: 3px; /* 枠線を角丸に */
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, .5); /* ドロップシャドーをつける */
 }
 
-header{
-  background-color: #422814;
-  padding: 10px;
-  color: #fff;
-}
-
-header h1{
-  font-family: "Sriracha", cursive;
-  margin: 0;
-  font-size: 24px;
-  font-weight: normal;
-  text-align: center;
-}
-
-.description img{
-  clear: left;
-  float: left;
-  margin: 0 10px 10px 0;
-}
-
-.information h1{
-  font-size: 18px;
-  margin: 0 10px 10px 0;
-  float: left;
-}
-
-.information .type{
-  display: inline;
-  background-color: #E35A4D;
-  padding: 3px 5px;
-  font-size: 80%;
-  color: #FFF;
-}
-
-.content{
-  background-color: #fff;
-  padding: 20px;
-}
-
-.songs{
-  margin: 0 0 20px;
-}
-
-.songs h2{
-  clear: left;
-  font-size: 100%;
-  font-weight: normal;
-  margin: 0;
-  background-color: #E6E4DD;
-  padding: 5px 10px;
-}
-
-.songs ol{
-  padding: 0;
-  margin: 0;
-  list-style: decimal inside;
-}
-
-.songs li{
-  border-bottom: 1px solid #ccc;
-  width: 50%;
-  float: left;
-  padding: 5px 10px;
-}
-
-.clearfix:after{
-  content: " ";
-  display: table;
-  clear: both;
-}
-
-a{
-  color: #666;
-}
-
-footer{
-  text-align: center;
-  font-size: 80%;
+.btn {
+    width: 100%; /* 幅を 100% に */
 }
